cherry-pick(release-1.16): fix action icons to be always visible (#9666)
This cherry-picks a9bf96e1bd08fc634d92c8301ebc7c0d6444bedb

--- a/packages/playwright-core/src/web/traceViewer/ui/actionList.css
+++ b/packages/playwright-core/src/web/traceViewer/ui/actionList.css
@@ -77,6 +77,7 @@
 }
 
 .action-icons {
+  flex: none;
   display: flex;
   flex-direction: row;
   cursor: pointer;
